# xp3vfs

./: .gitignore  cli.cpp  decompressor.cpp  decompressor.h  meson.build  meson_options.txt  xp3.cpp  xp3.h
subprojects/: .gitignore  utils.wrap
